[th2-121] Refactored